--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,7 +1,7 @@
 .contact {
   height: 80vh;
   margin: 0;
-  padding-top: 4em;
+  /* padding-top: 1em; */
 }
 
 h2 {
@@ -10,8 +10,6 @@ h2 {
 }
 
 .contact-container {
-  /* width: 50%; */
-  margin-top: 1em;
   border: solid 3px white;
   padding: 1em;
 
